Fixed InfoPanel overflow bug

--- a/src/controller/application.css
+++ b/src/controller/application.css
@@ -20,6 +20,10 @@
 	-fx-background-color: linear-gradient(#ffffff, #ffffff);
 }
 
+#taskDetails {
+	-fx-font-size: 20;
+}
+
 #taskListBox {
 	-fx-background-color: linear-gradient(#ffffff, #ffffff);
 	-fx-border-color: white ;
@@ -27,7 +31,7 @@
 
 #taskListBox > .label {
 	-fx-font-size: 24;
-	-fx-padding: 20 0 0 0;
+	-fx-padding: 15 0 0 0;
 } 
 
 #taskList {
